--- a/LT.NET_project_cuoiki/Asset/css/product.css
+++ b/LT.NET_project_cuoiki/Asset/css/product.css
@@ -1,18 +1,22 @@
 html a:hover {
     text-decoration: none !important;
 }
-.header_page{
+
+.header_page {
     background-color: #E4E4E4;
     width: 100%;
 }
-.header_page-main{
+
+.header_page-main {
     width: 80%;
     margin: 0 auto;
     background-color: #E4E4E4;
 }
-.header_page-category-main-menu{
+
+.header_page-category-main-menu {
     margin-bottom: 0;
 }
+
 .sticky {
     width: 100%;
     background: #fff;
@@ -33,58 +37,64 @@ html a:hover {
     background: #b2bec3;
 }
 
-.body_page-menu ul {
-    width: 80%;
-    margin: 0 auto;
-    display: flex;
-}
+    .body_page-menu ul {
+        width: 80%;
+        margin: 0 auto;
+        display: flex;
+    }
 
-.body_page-menu ul li {
-    margin-right: 10px;
-}
+        .body_page-menu ul li {
+            margin-right: 10px;
+        }
 
-.body_page-menu span {
-    margin-right: 10px;
-}
+    .body_page-menu span {
+        margin-right: 10px;
+    }
 
-.body_page-menu ul li:first-child:hover a {
-    color: #bc8247;
-}
+    .body_page-menu ul li:first-child:hover a {
+        color: #bc8247;
+    }
 
-.body_page-menu ul li a {
-    color: #000;
-    transition: all 0.2s;
-}
+    .body_page-menu ul li a {
+        color: #000;
+        transition: all 0.2s;
+    }
 
-.body_page-menu ul li a i {
-    margin-right: 3px;
-    font-size: 14px;
-}
+        .body_page-menu ul li a i {
+            margin-right: 3px;
+            font-size: 14px;
+        }
 /*.body_page-menu ul li:last-child a{*/
 /*    color: #a3a3a3;*/
 /*}*/
-.product_categories{
+.product_categories {
     padding: 40px 0;
 }
-.product_sidebar{
+
+.product_sidebar {
     border-radius: 10px;
     border: 1px solid #eee;
     padding: 10px;
 }
-.mb_55{
+
+.mb_55 {
     margin-bottom: 55px;
 }
-.mb_55:last-child{
-    margin-bottom: 10px;
-}
-.sidebar_widget-title{
+
+    .mb_55:last-child {
+        margin-bottom: 10px;
+    }
+
+.sidebar_widget-title {
     margin-bottom: 25px;
 }
-.sidebar_widget-title h3, .product_header-left h3{
-    font-size: 20px ;
-    margin-bottom: 0;
-}
-.sidebar_widget-content ul .list_item a{
+
+    .sidebar_widget-title h3, .product_header-left h3 {
+        font-size: 20px;
+        margin-bottom: 0;
+    }
+
+.sidebar_widget-content ul .list_item a {
     font-size: 16px;
     cursor: pointer;
     margin-bottom: 18px;
@@ -95,74 +105,97 @@ html a:hover {
     align-items: center;
     text-decoration: none;
 }
-.sidebar_widget-content ul li a:hover{
+
+.sidebar_widget-content ul li a:hover {
     color: #bc8247;
 }
-.sidebar_widget-content ul li a i{
+
+.sidebar_widget-content ul li a i {
     font-size: 14px;
 }
-.sidebar_widget-content ul ul li a{
+
+.sidebar_widget-content ul ul li a {
     margin-left: 20px;
 }
-.sidebar_widget-content ul ul{
+
+.sidebar_widget-content ul ul {
     display: none;
 }
-.sidebar_widget-content ul .dropdown:hover ul{
+
+.sidebar_widget-content ul .dropdown:hover ul {
     display: block;
 }
+
 .slider_range {
     position: relative;
     margin-bottom: 25px;
 }
-.sidebar_widget-content .color_pick ul li{
+
+.sidebar_widget-content .color_pick ul li {
     display: inline-block;
     margin-right: 13px;
 }
-.sidebar_widget-content .color_pick ul li button {
-    width: 20px;
-    height: 20px;
-    border-radius: 50%;
-    border: solid 1px #eee;
-}
-.sidebar_widget-content .color_pick ul li button:hover {
-    border: solid 2px #a3a3a3;
-}
-.sidebar_widget-content .color_pick ul li button.color-1 {
-    background: #000000;
-}
-.sidebar_widget-content .color_pick ul li button.color-2 {
-    background: #0000FF;}
-.sidebar_widget-content .color_pick ul li button.color-3 {
-    background: #A52A2A;
-}
-.sidebar_widget-content .color_pick ul li button.color-4 {
-    background: #FFD700;
-}
-.sidebar_widget-content .color_pick ul li button.color-5 {
-    background: #008000;
-}
-.sidebar_widget-content .color_pick ul li button.color-6 {
-    background: linear-gradient(to right, red,orange,yellow,green,blue,indigo,violet);
-}
-.sidebar_widget-content .color_pick ul li button.color-7 {
-    background: #FFA500;
-}
-.sidebar_widget-content .color_pick ul li button.color-8 {
-    background: #FFC0CB;
-}
-.sidebar_widget-content .color_pick ul li button.color-9 {
-    background: #800080;
-}
-.sidebar_widget-content .color_pick ul li button.color-10 {
-    background: #FF0000;
-}
-.sidebar_widget-content .color_pick ul li button.color-11 {
-    background: #FFFFFF;
-}
-.sidebar_widget-content .color_pick ul li button.color-12 {
-    background: #FFFF00;
-}
-.product_header{
+
+    .sidebar_widget-content .color_pick ul li button {
+        width: 20px;
+        height: 20px;
+        border-radius: 50%;
+        border: solid 1px #eee;
+    }
+
+        .sidebar_widget-content .color_pick ul li button:hover {
+            border: solid 2px #a3a3a3;
+        }
+
+        .sidebar_widget-content .color_pick ul li button.color-1 {
+            background: #000000;
+        }
+
+        .sidebar_widget-content .color_pick ul li button.color-2 {
+            background: #0000FF;
+        }
+
+        .sidebar_widget-content .color_pick ul li button.color-3 {
+            background: #A52A2A;
+        }
+
+        .sidebar_widget-content .color_pick ul li button.color-4 {
+            background: #FFD700;
+        }
+
+        .sidebar_widget-content .color_pick ul li button.color-5 {
+            background: #008000;
+        }
+
+        .sidebar_widget-content .color_pick ul li button.color-6 {
+            background: linear-gradient(to right, red,orange,yellow,green,blue,indigo,violet);
+        }
+
+        .sidebar_widget-content .color_pick ul li button.color-7 {
+            background: #FFA500;
+        }
+
+        .sidebar_widget-content .color_pick ul li button.color-8 {
+            background: #FFC0CB;
+        }
+
+        .sidebar_widget-content .color_pick ul li button.color-9 {
+            background: #800080;
+        }
+
+        .sidebar_widget-content .color_pick ul li button.color-10 {
+            background: #FF0000;
+        }
+
+        .sidebar_widget-content .color_pick ul li button.color-11 {
+            background: #FFFFFF;
+        }
+
+        .sidebar_widget-content .color_pick ul li button.color-12 {
+            background: #FFFF00;
+        }
+
+.product_header {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -171,30 +204,37 @@ html a:hover {
     border-radius: 5px;
     padding: 10px;
 }
-.woocommerce_breadcrumb a{
+
+.woocommerce_breadcrumb a {
     color: #1B1919;
     font-style: normal;
 }
+
 .woocommerce_breadcrumb a {
     margin-right: 5px
 }
 
-.woocommerce_breadcrumb a:after {
-    content: "/";
-    margin-left: 5px
-}
-.woocommerce_breadcrumb a:hover{
-    text-decoration: none;
-}
-.woocommerce_breadcrumb span{
+    .woocommerce_breadcrumb a:after {
+        content: "/";
+        margin-left: 5px
+    }
+
+    .woocommerce_breadcrumb a:hover {
+        text-decoration: none;
+    }
+
+.woocommerce_breadcrumb span {
     color: #a3a3a3;
 }
-.product_header .product_header-right select{
+
+.product_header .product_header-right select {
     border: none;
 }
-.product_header-right span{
+
+.product_header-right span {
     color: #a3a3a3;
 }
+
 .body_page-trending-product-list-card {
     border-radius: 10px;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 2px 6px;
@@ -203,66 +243,77 @@ html a:hover {
     margin-bottom: 30px;
 }
 
-.body_page-trending-product-list-card .card-image {
-    object-fit: cover;
-    transition: all .3s;
-}
-.body_page-trending-product-list-card .card-image img{
-    height: 200px;
-    border-radius: 10px 10px 0 0;
-}
+    .body_page-trending-product-list-card .card-image {
+        object-fit: cover;
+        transition: all .3s;
+    }
 
-.body_page-trending-product-list-card .card-image:hover {
-    transform: scale(0.8);
-}
+        .body_page-trending-product-list-card .card-image img {
+            height: 200px;
+            border-radius: 10px 10px 0 0;
+        }
 
-.body_page-trending-product-list-card .card-title-price {
-    padding: 10px;
-    line-height: 1.5;
-}
+        .body_page-trending-product-list-card .card-image:hover {
+            transform: scale(0.8);
+        }
 
-.body_page-trending-product-list-card .card-title-price p {
-    font-weight: 300;
-    margin-bottom: 0;
-}
+    .body_page-trending-product-list-card .card-title-price {
+        padding: 10px;
+        line-height: 1.5;
+    }
 
-.body_page-trending-product-list-card .card-title-price span {
-    color: #e32124;
-    font-weight: bold;
-}
-.body_page-trending-product-list-card .card-btn {
-    padding: 0 0 10px 0;
-}
+        .body_page-trending-product-list-card .card-title-price p {
+            font-weight: 300;
+            margin-bottom: 0;
+        }
 
-.body_page-trending-product-list-card .card-btn button {
-    padding: 10px 15px;
-    border: 1px solid #bc8247;
-    background: none;
-    color: #bc8247;
-    font-weight: bold;
-    border-radius: 6px;
-    cursor: pointer;
-    transition: all.3s;
-}
-.body_page-trending-product-list-card .card-btn button a {
-    color: #bc8247;
-    transition: all .3s;
-}
-.body_page-trending-product-list-card .card-btn button:hover a {
-    color: #fff;
-}
+        .body_page-trending-product-list-card .card-title-price span {
+            color: #e32124;
+            font-weight: bold;
+        }
 
-.body_page-trending-product-list-card .card-btn button:hover {
-    transform: scale(0.9);
-    background: #bc8247;
-    color: #fff;
-}
+    .body_page-trending-product-list-card .card-btn {
+        padding: 0 0 10px 0;
+        display: inline-block;
+    }
+
+        .body_page-trending-product-list-card .card-btn button {
+            padding: 10px 15px;
+            border: 1px solid #bc8247;
+            background: none;
+            color: #bc8247;
+            font-weight: bold;
+            border-radius: 6px;
+            cursor: pointer;
+            transition: all.3s;
+            display: inline-block;
+        }
+
+        .body_page-trending-product-list-card .card-btn form {
+            display: inline-block;
+        }
+
+        .body_page-trending-product-list-card .card-btn button a {
+            color: #bc8247;
+            transition: all .3s;
+        }
+
+        .body_page-trending-product-list-card .card-btn button:hover a {
+            color: #fff;
+        }
+
+        .body_page-trending-product-list-card .card-btn button:hover {
+            transform: scale(0.9);
+            background: #bc8247;
+            color: #fff;
+        }
 
 .pagenav {
     position: relative;
     width: 100%;
     margin-bottom: 20px
 }
+
 .nav_pagi {
     display: inline-block;
     background: #fff;
@@ -270,16 +321,16 @@ html a:hover {
     width: 100%
 }
 
-.nav_pagi .pagination {
-    position: relative;
-    z-index: 1;
-    padding: 0 0px;
-    margin: 0 0 0px;
-    display: flex;
-    align-items: center;
-    justify-content: end;
-    list-style: none
-}
+    .nav_pagi .pagination {
+        position: relative;
+        z-index: 1;
+        padding: 0 0px;
+        margin: 0 0 0px;
+        display: flex;
+        align-items: center;
+        justify-content: end;
+        list-style: none
+    }
 
 @media (max-width: 768px) {
     .nav_pagi .pagination {
@@ -305,19 +356,19 @@ html a:hover {
     border-radius: 5px
 }
 
-.nav_pagi .pagination .page-link.link-next-pre {
-    line-height: 26px
-}
+    .nav_pagi .pagination .page-link.link-next-pre {
+        line-height: 26px
+    }
 
-.nav_pagi .pagination .page-link.page-db {
-    width: auto;
-    padding: 0 20px
-}
+    .nav_pagi .pagination .page-link.page-db {
+        width: auto;
+        padding: 0 20px
+    }
 
-.nav_pagi .pagination .page-link:hover {
-    background-color: #bc8247;
-    color: #fff
-}
+    .nav_pagi .pagination .page-link:hover {
+        background-color: #bc8247;
+        color: #fff
+    }
 
 .nav_pagi .pagination .page-item.disabled .page-link {
     border: 0;
@@ -330,16 +381,19 @@ html a:hover {
     color: #fff;
     display: block;
 }
-.price-input{
+
+.price-input {
     display: flex;
     margin-top: 20px;
 }
-.price-input .field{
-    display: flex;
-    height: 40px;
-    align-items: center;
-}
-.field input{
+
+    .price-input .field {
+        display: flex;
+        height: 40px;
+        align-items: center;
+    }
+
+.field input {
     width: 100%;
     height: 70%;
     outline: none;
@@ -349,44 +403,51 @@ html a:hover {
     border: 1px solid #a3a3a3;
     -moz-appearance: textfield;
 }
+
 input[type="number"]::-webkit-outer-spin-button,
 input[type="number"]::-webkit-inner-spin-button {
     -webkit-appearance: none;
 }
-.price-input .separator{
+
+.price-input .separator {
     display: flex;
     align-items: center;
     justify-content: center;
     margin: 0 5px;
 }
-.slider{
+
+.slider {
     height: 5px;
     position: relative;
     background: #a3a3a3;
     border-radius: 5px;
 }
-.slider .progress{
-    height: 100%;
-    left: 20%;
-    right: 40%;
-    position: absolute;
-    border-radius: 5px;
-    background: #bc8247;
-}
-.range-input{
+
+    .slider .progress {
+        height: 100%;
+        left: 20%;
+        right: 40%;
+        position: absolute;
+        border-radius: 5px;
+        background: #bc8247;
+    }
+
+.range-input {
     position: relative;
 }
-.range-input input{
-    position: absolute;
-    width: 100%;
-    height: 5px;
-    top: -5px;
-    background: none;
-    pointer-events: none;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-}
-input[type="range"]::-webkit-slider-thumb{
+
+    .range-input input {
+        position: absolute;
+        width: 100%;
+        height: 5px;
+        top: -5px;
+        background: none;
+        pointer-events: none;
+        -webkit-appearance: none;
+        -moz-appearance: none;
+    }
+
+input[type="range"]::-webkit-slider-thumb {
     height: 17px;
     width: 17px;
     border-radius: 50%;
@@ -395,7 +456,8 @@ input[type="range"]::-webkit-slider-thumb{
     -webkit-appearance: none;
     box-shadow: 0 0 6px rgba(0,0,0,0.05);
 }
-input[type="range"]::-moz-range-thumb{
+
+input[type="range"]::-moz-range-thumb {
     height: 17px;
     width: 17px;
     border: none;
@@ -405,30 +467,35 @@ input[type="range"]::-moz-range-thumb{
     -moz-appearance: none;
     box-shadow: 0 0 6px rgba(0,0,0,0.05);
 }
-.sidebar_widget .featured_products li{
+
+.sidebar_widget .featured_products li {
     margin-bottom: 20px;
     padding-bottom: 10px;
     border-bottom: 1px solid rgba(124,124,124,.15);
 }
-.sidebar_widget .featured_products li:last-child{
-    margin-bottom: 0;
-    padding-bottom: 0px;
-    border-bottom: none;
-}
-.featured_products-wrapper{
+
+    .sidebar_widget .featured_products li:last-child {
+        margin-bottom: 0;
+        padding-bottom: 0px;
+        border-bottom: none;
+    }
+
+.featured_products-wrapper {
     display: flex;
 }
+
 .featured_products .featured_products-thumb {
     height: 80px;
     width: 80px;
     margin-right: 15px;
 }
 
-.featured_products .featured_products-thumb img {
-    width: 80px;
-    height: 80px;
-    object-fit: cover;
-}
+    .featured_products .featured_products-thumb img {
+        width: 80px;
+        height: 80px;
+        object-fit: cover;
+    }
+
 .featured_products-content h5 {
     font-size: 14px;
     color: #444;
@@ -436,9 +503,11 @@ input[type="range"]::-moz-range-thumb{
     font-weight: 400;
     line-height: 20px;
 }
+
 .featured_products-content .price {
     position: relative;
 }
+
 .featured_products-content h5 {
     font-size: 14px;
     color: #444;
@@ -446,32 +515,35 @@ input[type="range"]::-moz-range-thumb{
     font-weight: 400;
     line-height: 20px;
 }
-.featured_products-content h5 a{
-    color: inherit;
-    margin-bottom: 5px;
-}
-.footer_area{
+
+    .featured_products-content h5 a {
+        color: inherit;
+        margin-bottom: 5px;
+    }
+
+.footer_area {
     background-color: #151616;
 }
-.footer_page h3{
+
+.footer_page h3 {
     font-weight: 600;
     color: #fff;
 }
-.footer_page ul{
+
+.footer_page ul {
     margin-bottom: 0 !important;
 }
-.footer_page ul li {
-    color: #b4b3b3;
-}
+
+    .footer_page ul li {
+        color: #b4b3b3;
+    }
 /* responsive */
 @media screen and (max-width: 428px) {
     .header_page-main {
         width: 100%;
     }
+
     .body_page-menu ul {
         width: 100%;
     }
 }
-
-
-
